<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="112dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvRepositoryName"
            style="@style/Text.Item.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:maxLength="30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="some repository name" />

        <TextView
            android:id="@+id/tvRepositoryDescription"
            style="@style/Text.Item.Common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@+id/ivAuthorAvatar"
            app:layout_constraintStart_toStartOf="@+id/tvRepositoryName"
            app:layout_constraintTop_toBottomOf="@+id/tvRepositoryName"
            tools:text="some repository description. Long line. What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book it has?" />

        <ImageView
            android:id="@+id/ivAuthorAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/common_image_content_description_author_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/ivViewedIndicator"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/common_image_content_description_viewed_indicator"
            android:src="@drawable/ic_viewed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvRepositoryStars"
            style="@style/Text.Item.Common"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivRepositoryStars"
            app:layout_constraintStart_toEndOf="@+id/ivRepositoryStars"
            app:layout_constraintTop_toTopOf="@+id/ivRepositoryStars"
            tools:text="20000" />

        <ImageView
            android:id="@+id/ivRepositoryStars"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/common_image_content_descriptor_stars_count"
            android:src="@drawable/ic_stars"
            android:tint="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>